--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,10 @@
             <input type="date" name="checkin" required><br>
             <label>Check-out Date:</label>
             <input type="date" name="checkout" required><br>
+            <input type="text" name="nights" placeholder="Nights" required><br>
+            <input type="text" name="total_price" placeholder="Total Price" required><br>
+            <input type="text" name="payment_status" placeholder="Payment Status" required><br>
+            <input type="file" name="payment_proof"><br>
             <button type="submit">Confirm Booking</button>
             <button type="button" onclick="closeBookingForm()">Cancel</button>
         </form>
